<resources>
    <string name="app_name">Cremosa</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="nome">Nome</string>
    <string name="register">Sign Up</string>
    <string name="ativar_localiza_o">Ativar localização</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_a_message">Type a message</string>
    <string name="create_event">Create a Event</string>
    <string name="event_name">Event Name</string>
    <string name="event_radius">Radius</string>
    <string name="event_duration">Duration</string>
    <string name="event_participants">Total Participants</string>
    <string name="event_title">Title</string>
    <string name="event_duration_out">Event Duration</string>
    <string name="event_radius_out">Event Radius</string>
    <string name="event_participants_out">Number of Participants on Event</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="login_to_register">Don\'t have an account? Register now</string>
    <string name="AutorizeToContinue">Você precisa permitir a localização para usar a applicação.</string>
    <string name="Activate">Ativar Localização</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="name_label">Your Name</string>
    <string name="name_edit">Name</string>
    <string name="age_label">My Age</string>
    <string name="age_preference_label">Age Group</string>
    <string name="gender">My Sex</string>
    <string name="sexualorientation">Show me</string>
    <string name="description_label">Description</string>
    <string name="right_about_you">Right about you</string>
    <string name="but_ave">Save</string>
    <string name="delete_account">Delete Account</string>
    <string name="profile_your_name">Your Name</string>
    <string name="profile_your_age">Your Age</string>
    <string name="profile_but_edit">Edit</string>
    <string name="imagens_de_profile">Imagens de profile</string>
    <string name="search">search</string>
    <string name="menu_map">map</string>
    <string name="menu_chat">chat</string>
    <string name="menu_profile">profile</string>
    <string name="repeatpassword">Repeat Password</string>
    <string name="we_will_send_you_an">We will send you an</string>
    <string name="get_solution">Ask your any question for Expert and get olution for your problem</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="males">Males</string>
    <string name="females">Females</string>
    <string name="everyone">Everyone</string>
    <string name="log_out">Log Out</string>
    <string name="delete_event">Delete Event</string>

</resources>
