<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.arec.EventDescription">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/event_title"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/event_title"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />


        <TextView
            android:id="@+id/event_duration_out"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/event_duration_out"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_title"
            app:layout_constraintVertical_bias="0.302" />

        <TextView
            android:id="@+id/event_radius_out"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/event_radius_out"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_duration_out"
            app:layout_constraintVertical_bias="0.223" />

        <TextView
            android:id="@+id/event_participants_out"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:layout_marginBottom="128dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/event_participants_out"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_radius_out" />

        <Button
            android:id="@+id/but_join"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_bg"
            android:text="@string/join"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_participants_out"
            app:layout_constraintWidth_percent=".8" />

        <TextView
            android:id="@+id/deletEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/delete_event"
            android:textColor="@color/red"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/but_join"
            android:visibility="invisible"
            app:layout_constraintVertical_bias="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>