<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.arec.MapsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/imageView2"
                android:layout_width="405dp"
                android:layout_height="733dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="-2dp"
                tools:srcCompat="@tools:sample/avatars"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/imagens_de_profile" />

            <TextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="676dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/profile_your_name"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.057"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profileAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="676dp"
                android:fontFamily="@font/roboto"
                android:text="@string/profile_your_age"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.173"
                app:layout_constraintStart_toEndOf="@+id/profileName"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <TextView
                android:id="@+id/profileDescription"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/description_label"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileName"
                app:layout_constraintVertical_bias="0.13" />


            <Button
                android:id="@+id/but_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:background="@drawable/button_bg"
                android:text="@string/profile_but_edit"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundTint="@null"
                app:layout_constraintBaseline_toBottomOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileDescription"
                app:layout_constraintWidth_percent=".8" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>