<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.arec.CreateEvent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/create_event"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/create_event"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <EditText
            android:id="@+id/event_name"
            android:layout_width="325dp"
            android:layout_height="45dp"

            android:layout_marginTop="8dp"
            android:autofillHints="Name"


            android:background="@drawable/edit_text_bg"
            android:hint="@string/event_name"
            android:inputType="text"
            android:paddingLeft="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"


            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_event"
            app:layout_constraintVertical_bias="0.058" />



        <EditText
            android:id="@+id/event_radius"
            android:layout_width="325dp"
            android:layout_height="45dp"

            android:autofillHints="radius"
            android:background="@drawable/edit_text_bg"


            android:hint="@string/event_radius"
            android:inputType="numberDecimal"
            android:paddingLeft="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"


            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_name"
            app:layout_constraintVertical_bias="0.088" />

        <EditText
            android:id="@+id/event_duration"
            android:layout_width="325dp"
            android:layout_height="45dp"

            android:layout_marginTop="8dp"
            android:autofillHints="Durantion"


            android:background="@drawable/edit_text_bg"
            android:hint="@string/event_duration"
            android:inputType="numberDecimal"
            android:paddingLeft="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"

            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_radius"
            app:layout_constraintVertical_bias="0.064" />

        <EditText
            android:id="@+id/event_participants"
            android:layout_width="325dp"
            android:layout_height="45dp"

            android:layout_marginTop="8dp"


            android:autofillHints="Participants"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/event_participants"
            android:inputType="numberDecimal"
            android:paddingLeft="20sp"
            android:paddingTop="10dp"

            android:paddingBottom="10dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_duration"
            app:layout_constraintVertical_bias="0.091" />




        <Button
            android:id="@+id/but_create_event"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button_bg"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_participants"
            app:layout_constraintWidth_percent=".8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>