<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.arec.EditProfileOnRegister">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_title"
                android:fontFamily="@font/roboto"
                android:textSize="24sp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/name_labelRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/titleRegister"
                app:layout_constraintStart_toStartOf="parent"/>


            <EditText
                android:id="@+id/name_editRegister"
                android:layout_width="318dp"
                android:layout_height="51dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="Description"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/name_edit"
                android:inputType="text"
                android:paddingLeft="20sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_labelRegister"
                app:layout_constraintWidth_default="spread" />

            <TextView
                android:id="@+id/age_labelRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/age_label"
                android:textSize="18sp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/name_editRegister"
                app:layout_constraintStart_toStartOf="parent"/>

            <SeekBar
                android:id="@+id/age_seek_barRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:progressTint="@color/pink"
                android:thumbTint="@color/pink"
                android:max="100"
                android:progress="30"
                app:layout_constraintTop_toBottomOf="@id/age_labelRegister"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/agePreference_labelRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/age_preference_label"
                android:textSize="18sp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/age_seek_barRegister"
                app:layout_constraintStart_toStartOf="parent"/>

            <SeekBar
                android:id="@+id/agePreference_seek_barRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:progressTint="@color/pink"
                android:thumbTint="@color/pink"
                android:max="100"
                android:progress="30"
                app:layout_constraintTop_toBottomOf="@id/agePreference_labelRegister"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/gender_labelRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/gender"
                android:textSize="18sp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/agePreference_seek_barRegister"
                app:layout_constraintStart_toStartOf="parent"/>

            <RadioGroup
                android:id="@+id/gender_radio_groupRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/gender_labelRegister"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <RadioButton
                    android:id="@+id/male_radio_buttonRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/pink"
                    android:text="Male"/>

                <RadioButton
                    android:id="@+id/female_radio_buttonRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/pink"
                    android:text="Female"/>

                <RadioButton
                    android:id="@+id/other_radio_buttonRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/pink"
                    android:text="Other"/>
            </RadioGroup>

            <TextView
                android:id="@+id/sexualOrientation_labelRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexualorientation"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/gender_radio_groupRegister"
                app:layout_constraintStart_toStartOf="parent"/>

            <RadioGroup
                android:id="@+id/sexualOrientation_radio_groupRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/sexualOrientation_labelRegister"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <RadioButton
                    android:id="@+id/males_radio_buttonRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/pink"
                    android:text="Males"/>

                <RadioButton
                    android:id="@+id/females_radio_buttonRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/pink"
                    android:text="Females"/>

                <RadioButton
                    android:id="@+id/either_radio_buttonRegister"
                    android:layout_width="wrap_content"
                    android:buttonTint="@color/pink"
                    android:layout_height="wrap_content"
                    android:text="Everyone"/>
            </RadioGroup>


            <TextView
                android:id="@+id/description_labelRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_label"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/sexualOrientation_radio_groupRegister"
                app:layout_constraintStart_toStartOf="parent"/>


            <EditText
                android:id="@+id/descriptionRegister"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="Description"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/right_about_you"
                android:inputType="text"
                android:paddingLeft="20sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_labelRegister"
                app:layout_constraintWidth_default="spread" />


            <Button
                android:id="@+id/but_saveRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_bg"
                android:text="@string/but_ave"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundTint="@null"
                app:layout_constraintBaseline_toBottomOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.512"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionRegister"
                app:layout_constraintWidth_percent=".8" />

            <TextView
                android:id="@+id/delete_accountRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:text="@string/delete_account"
                android:textColor="@color/red"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/but_saveRegister"
                app:layout_constraintVertical_bias="0.9" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>